--- a/worldtour/en/styles/blog.css
+++ b/worldtour/en/styles/blog.css
@@ -162,6 +162,10 @@ span #postedby {
 	font-size: 14px;
 }
 
+.comments_form {
+	margin-top: 20%;
+}
+
 #submit, #post {
 	border: none;
 	float: left;
@@ -273,3 +277,23 @@ h5.posted_by {
 	position: absolute;
 	margin-top: 0.5%;
 }
+
+.captcha_num {
+	position: absolute;
+	color: #05356E;
+	margin-top: -20.2%;
+	margin-left: 51%;
+}
+
+#blog_comment_errors {
+	color: #f00;
+	position: relative;
+}
+
+#contact_errors {
+	margin-top: 40%;
+	margin-left: 32%;
+	position: absolute;
+	color: #05356E;
+}
+
