Added article comments feature for registered users

--- a/worldtour/en/styles/blog.css
+++ b/worldtour/en/styles/blog.css
@@ -110,6 +110,22 @@ div#google_translate_element span a {
 	margin-bottom: 2px;
 }
 
+.artline2 {
+	border: 1px dotted #70be12;
+    border-style: none none dotted; 
+    color: #fff; 
+}
+
+.commented_by, .comments {
+	color:#05356E;
+	font-size: 14px;
+	background-color: #D9F8B4;
+}
+
+.commented_by {
+	font-style: italic;
+	font-weight: bold;
+}
 /********************************* =BEGIN MISC STYLES *********************************/
 
 .content_headers {
@@ -163,7 +179,7 @@ span #postedby {
 }
 
 .comments_form {
-	margin-top: 20%;
+	margin-top: 0%;
 }
 
 #submit, #post {
@@ -278,7 +294,7 @@ h5.posted_by {
 	margin-top: 0.5%;
 }
 
-.captcha_num {
+/*.captcha_num {
 	position: absolute;
 	color: #05356E;
 	margin-top: -20.2%;
@@ -297,3 +313,4 @@ h5.posted_by {
 	color: #05356E;
 }
 
+*/
